--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@reduxjs/toolkit": "^1.9.7",
     "antd": "^5.11.1",
     "axios": "^1.6.1",
+    "dayjs": "^1.11.10",
     "json-server": "^0.17.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
